style.css
/*
Theme Name: Open Sans Minimal
Theme URI: http://github.com/felixmc/open-sans-minimal
Description: Minimal white theme using Open Sans font-face.
Version: 1.0
Author: Felix Milea-Ciobanu
Author URI: http://felixmc.com/
*/

/* FONTS */
@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 400;
	src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
}

@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 600;
	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/MTP_ySUJH_bn48VBG8sNSnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
}

@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 700;
	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
}

@font-face {
	font-family: 'Open Sans';
	font-style: italic;
	font-weight: 400;
	src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/xjAJXh38I15wypJXxuGMBobN6UDyHWBl620a-IRfuBk.woff) format('woff');
}

@font-face {
	font-family: 'fontello';
	src: url('fonts/fontello.eot?51393224');
	src: url('fonts/fontello.eot?51393224#iefix') format('embedded-opentype'),
			 url('fonts/fontello.svg?51393224#fontello') format('svg'),
			 url('fonts/fontello.woff?51393224') format('woff'),
			 url('fonts/fontello.ttf?51393224') format('truetype');
	font-weight: normal;
	font-style: normal;
}

/* CSS RESET */
body {
	margin: 0;
	padding: 0;
}


/* GLOBAL STYLES */
body {
	font-family: "Open Sans", Helvetica, Sans-Serif;
}

code {
	font-family: monospace;
}

a:link, a:visited, a:active {
	color: rgb(46, 153, 187);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

[class^="icon-"]:before, [class*=" icon-"]:before {
	font-family: "fontello";
	font-style: normal;
	font-weight: normal;
	speak: none;
 
	display: inline-block;
	text-decoration: inherit;
	width: 1em;
	margin-right: .2em;
	text-align: center;
	opacity: .4;
 
	font-variant: normal;
	text-transform: none;
		  
	margin-left: .2em; 
}
 
.icon-search:before { content: '\e800'; }

.container:after {
	content: "";
	display: block;
	clear: both;
}

/* Structure and Responsiveness */

.wrapper {
	width: 90%;
	max-width: 1000px;
	display: block;
	margin: 0 auto;
}

.left-column {
	width: 100%;
	margin-right: 0;
}

.right-column {
	width: 100%;
}

#header .search-form {
	width: auto;
	left: 0;
}

#footer {
	padding-top: 15px;
	padding-bottom: 10px;
	margin-top: 10px;
}

@media (min-width: 700px) {
	.left-column {
		width: 35%;
		float: left;
		margin-right: 2%;
	}

	.right-column {
		width: 63%;
		float: right;
	}

	#header .search-form {
		left: auto;
		right: 0;
		width: 200px;
	}

	#footer {
		margin-top: 20px;
		padding-bottom: 0;
	}
}

/* General Styles */
body {
	background-color: #fff;
}

#header {
	background: rgb(46, 153, 187);
	padding: 10px 0;
}

#header h1 {
	margin-top: 0;
	margin-bottom: 0;
	font-size: 30px;
}

#header a {
	color: #fff;
}

#header .menu {
	padding-left: 0;
}

#header .menu li {
	float: left;
	list-style-type: none;
	margin-right: 60px;
	font-weight: 600;
}

#header .container {
	position: relative;
}

#header .search-form {
	position: absolute;
	right: 0;
	height: 30px;
	bottom: -50px;
	background: #ececec;
	padding: 5px 10px;
	padding-left: 35px;
}

#header .search-form i {
	position: absolute;
	left: 7px;
	top: 10px;
}

#header .search-form input {
	height: 100%;
	width: 100%;
	border: none;
	outline: none;
	background: inherit;
	color: #333;
}

.post {
	margin-top: 70px;
}

.post h2 {
	font-size: 26px;
	font-weight: 400;
}

.post p {
	color: #303030;
	font-size: 16px;
	line-height: 28px;
	margin-bottom: 30px;
}

.post code {
	font-size: 15px;
	background: #ececec;
	padding: 2px 5px;
}

.post img {
	max-width: 100%;
	height: auto;	
}

.post pre, .post p {
	word-wrap: break-word;
}

.post .post-meta {
	font-size: 14px;
}

.pagetitle {
	text-align: center;
	font-size: 30px;
	margin-top: 60px;
}

#footer {
	font-size: 14px;
	border-top: 1px solid #ccc;
	padding-top: 15px;
}

#footer p {
	margin-top: 0;
}

#footer .menu {
	margin: 0;
	padding-left: 0;
}

#footer .menu li {
	float: left;
	list-style-type: none;
}

#footer .menu li:after {
	content: '/';
	color: #000;
	margin-left: 10px;
	margin-right: 10px;
}

